@@ -34,11 +34,12 @@ class JFormFieldCheckbox extends JFormField
 	protected function _getInput()
 	{
 		$value =((string)$this->_element->attributes()->value !== null) ? (string)$this->_element->attributes()->value : '';
-		$attributes = (!empty($value) && $value == $this->value) ? ' checked="checked"' : '';
+		$readonly =((string)$this->_element->attributes()->readonly == 'true') ? ' disabled="disabled"' : '';
+		$checked = (!empty($value) && $value == $this->value) ? ' checked="checked"' : '';
 		if ($v = (string)$this->_element->attributes()->onclick) {
 			$attributes .= ' onclick="'.$this->_replacePrefix($v).'"';
 		}
 
-		return '<input type="checkbox" name="'.$this->inputName.'" id="'.$this->inputId.'" value="'.$value.'"'.$attributes.' />';
+		return '<input type="checkbox" name="'.$this->inputName.'" id="'.$this->inputId.'" value="'.$value.'"'.$checked.$readonly.' />';
 	}
 }
